--- a/templates/expenses/edit.html
+++ b/templates/expenses/edit.html
@@ -58,6 +58,7 @@
                     <input type="date" class="form-control" name="due_date" value="{{ expense.due_date }}">
                 </div>
                 <button type="submit" class="btn_2 mb-3" style="border: none; width: 100%;">Enviar</button>
+                <a href="/expenses/delete/{{ expense.id }}" class="btn_2 bg-red mb-4" style="border: none; width: 100%;">Deletar</a>
             </form>
         </div>
     </section>
